# Refinery

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: compare.rs  mod.rs  pages.rs  providers.rs  review.rs  versions.rs  window.rs
src-tauri/src/engine/: compare.rs  mod.rs  patch.rs  prompts.rs  suggestion.rs
src-tauri/src/migrations/: 001_initial.sql
src-tauri/src/providers/: mod.rs  openrouter.rs
src/assets/: main.css
src/components/: AppBar.vue  AppIcon.vue  AuditPanel.vue  CompareView.vue  Editor.vue  PageSwitcherModal.vue  PreviewPanel.vue  ReviewPanel.vue  ReviewSplitView.vue  SettingsPanel.vue  Sidebar.vue  SuggestionItem.vue  VersionHistory.vue  VersionPreviewModal.vue
src/composables/: useAutosave.ts  useReview.ts  useTauri.ts
src/stores/: app.ts  audit.ts  pages.ts  providers.ts  review.ts
src/types/: index.ts
