[package]
name = "refinery"
version = "0.1.0"
description = "AI Writing Editing Assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "refinery_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
similar = "2"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
